--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,7 +4,7 @@ name: Peer REVIEW
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
-  pull_request:
+  push:
     branches: [ "dev" ]
 
   # Allows you to run this workflow manually from the Actions tab
